<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Student Hub</string>
    <string name="sub_title">Sell What You Don\'t Need</string>

    <!--Login \ SignUp Activities-->
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="app_logo">App Logo</string>
    <string name="forgot_password">Forgot Password…</string>
    <string name="register">Register</string>
    <string name="please_wait">Please wait…</string>

    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_account">My account</string>
    <string name="fullname">Full name</string>
    <string name="profile_image">Profile Image</string>
    <string name="user">user</string>

    <!--My Account Fragment-->
    <string name="my_preferences">My Preferences</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password_again">Password Again</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="submit">Submit</string>

    <!--    Posts-->
    <string name="add_post">Add Post</string>
    <string name="post_name">Name</string>
    <string name="post_description">Description</string>
    <string name="post_price">price</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="new_post">New Post</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="post_image">Post Image</string>
    <string name="price_placeholder">ILS 100</string>
    <string name="search_data">Search Data</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="my_posts">My Posts</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="delete_post_question">Are you sure you want to delete this post?</string>
    <string name="delete_post_title">Delete Post</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_option">icon option</string>
    <string name="go_to_icon">go to icon</string>
    <string name="phone_icon_desc">phone icon</string>
    <string name="delete_post">Delete Post</string>
    <string name="Price">Price</string>
    <string name="logo_text">Every Student Loves\n\t\t\t\t\t\t\tTo Shop</string>
    <string name="posted">Posted:</string>
    <string name="report_post">report post</string>
</resources>