<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:orientation="vertical"
    android:backgroundTint="#CECECE"
    android:paddingTop="50dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/profile_image" />
    <EditText
        android:id="@+id/email_signup_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@null"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:textCursorDrawable="@null"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/fullname_signup_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/fullname"
        android:inputType="textEmailAddress"
        android:background="@null"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:textCursorDrawable="@null"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/password_signup_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@null"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:textCursorDrawable="@null"
        android:padding="10dp"
        />
    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:bottomRightRadius="60dp"
        android:bottomLeftRadius="60dp"
        android:topLeftRadius="60dp"
        android:topRightRadius="60dp"
        />


</LinearLayout>