<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="auth.ForgotPassword"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="40dp"
    android:backgroundTint="@color/light_gray"
    >
    <ImageView
        android:layout_width="400dp"
        android:layout_height="178dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_launcher_logo_foreground"
        android:contentDescription="@string/app_logo" />
    <EditText
        android:id="@+id/forgotemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@null"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:textCursorDrawable="@null"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:backgroundTint="@color/primary"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:bottomRightRadius="60dp"
        android:bottomLeftRadius="60dp"
        android:topLeftRadius="60dp"
        android:topRightRadius="60dp"
        />

</LinearLayout>