<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="#CECECE"
    android:paddingTop="50dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/profile_image_picker"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/profile_image"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="20dp"
    />


        <EditText
            android:id="@+id/test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="5dp"
            android:hint="@string/fullname"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:textCursorDrawable="@null"
            android:padding="10dp"
            />
        <Button
            android:id="@+id/add_post_btn"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:text="@string/add_post"
            android:backgroundTint="@color/primary"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:bottomRightRadius="60dp"
            android:bottomLeftRadius="60dp"
            android:topLeftRadius="60dp"
            android:topRightRadius="60dp"
            />
<!--    <com.example.myapplication.ProfileImage-->
<!--        style="@style/Widget.Theme.MyApplication.MyView"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="300dp"-->
<!--        android:paddingLeft="20dp"-->
<!--        android:paddingBottom="40dp"-->
<!--        app:exampleDimension="24sp"-->
<!--        app:exampleString="Hello, ProfileImage"-->
<!--        app:exampleDrawable="@android:drawable/ic_menu_add" />-->

</LinearLayout>