<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".posts_list.PostDetails"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/post_details_main_layout"
        >
    <ImageView
        android:id="@+id/post_image"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/post_image"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <TextView
                    android:id="@+id/title_post_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:paddingBottom="5dp"
                    />
            </LinearLayout>
                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="#00FF80"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/price_post_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/seller_profile_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_person_24"
                android:contentDescription="@string/profile_image" />
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                >
                <TextView
                    android:id="@+id/seller_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    />
                <TextView
                    android:id="@+id/seller_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <ImageView
                android:id="@+id/call_seller_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_phone_24"
                android:contentDescription="@string/phone_icon_desc"
                android:clickable="true"
                android:focusable="true"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/uploadDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/posted"
            android:textSize="14sp"
            android:textStyle="bold" />


        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
        <Button
            android:id="@+id/delete_post_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#006747"
            android:text="@string/delete_post"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>
        </LinearLayout>

</ScrollView>